--- a/index.css
+++ b/index.css
@@ -10,19 +10,87 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  flex-direction: column;
+  background-color: var(--bg);
   padding: 100px 30px;
+  min-height: 100vh;
 }
 
 :root {
   font-family: 'poppins', sans-serif;
   font-size: 16px;
 
-  --h1: 3rem;
+  --white: hsl(0, 0%, 97%);
+  --primary: hsl(166, 86%, 43%);
+
+  --bg: hsl(194, 27%, 15%);
+  --bg-dark: hsl(193, 27%, 10%);
+
+  --h1: 1.8rem;
   --h1-lh: calc(var(--h1) * 1.2);
+
+  --txt: 1.1rem;
+  --txt-lh: calc(var(--txt) * 1.2);
 }
 
 .title {
   font-size: var(--h1);
   line-height: var(--h1-lh);
+  font-weight: 700;
+  color: var(--primary);
+}
+
+.txt {
+  font-size: var(--txt);
+  line-height: var(--txt);
+  color: var(--white);
+}
+
+.lives-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px 0;
+  gap: 8px;
+}
+
+.lives-container .txt {
+  font-weight: 700;
+}
+
+.hidden {
+  display: none;
+}
+
+.heart {
+  max-width: 25px;
+  height: auto;
+}
+
+.alphabet {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 16px;
+  max-width: 600px;
+  gap: 16px;
+}
+
+.letter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: solid 1px var(--white);
+  line-height: var(--txt);
+  font-size: var(--txt);
+  color: var(--white);
+  border-radius: 6px;
+  height: 35px;
+  width: 35px;
+}
+
+.letter--pressed {
+  background-color: var(--white);
+  color: var(--bg-dark);
 }
