--- a/index.css
+++ b/index.css
@@ -26,10 +26,10 @@ body {
   --bg: hsl(194, 27%, 15%);
   --bg-dark: hsl(193, 27%, 10%);
 
-  --h1: 1.8rem;
+  --h1: 3.6rem;
   --h1-lh: calc(var(--h1) * 1.2);
 
-  --txt: 1.1rem;
+  --txt: 2.2rem;
   --txt-lh: calc(var(--txt) * 1.2);
 }
 
@@ -50,8 +50,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 16px 0 32px 0;
-  gap: 8px;
+  margin: 2rem 0 4rem 0;
+  gap: 0.5rem;
 }
 
 .lives-container .txt {
@@ -63,7 +63,7 @@ body {
 }
 
 .heart {
-  max-width: 25px;
+  max-width: 35px;
   height: auto;
 }
 
@@ -72,9 +72,9 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin: 16px 0 24px 0;
-  max-width: 650px;
-  gap: 16px;
+  margin: 2rem 0 3rem 0;
+  max-width: 1000px;
+  gap: 1rem;
 }
 
 .letter {
@@ -86,8 +86,8 @@ body {
   font-size: var(--txt);
   color: var(--white);
   border-radius: 6px;
-  height: 35px;
-  width: 35px;
+  height: 3.75rem;
+  width: 3.75rem;
 }
 
 .letter--pressed {
@@ -99,7 +99,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 0.75rem;
 }
 
 .guess-letter {
@@ -110,6 +110,6 @@ body {
   line-height: var(--txt-lh);
   border-bottom: 1px solid var(--white);
   color: var(--white);
-  height: 25px;
-  min-width: 10px;
+  height: 3.125rem;
+  min-width: 1.25rem;
 }
