--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ body {
 }
 
 .letter {
+  transition: all 0.25s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,6 +111,30 @@ body {
   line-height: var(--txt-lh);
   border-bottom: 1px solid var(--white);
   color: var(--white);
-  height: 3.125rem;
   min-width: 1.25rem;
+  height: 3.125rem;
+
+  transition: all 0.25s ease-in-out;
+  opacity: 1;
+}
+
+.guess-letter--pre-animation {
+  opacity: 0;
+}
+
+@keyframes fadeInFromNone {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+
+  1% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    display: block;
+    opacity: 1;
+  }
 }
