--- a/index.css
+++ b/index.css
@@ -31,6 +31,9 @@ body {
 
   --txt: 2.2rem;
   --txt-lh: calc(var(--txt) * 1.2);
+
+  --txt-s: 1.1rem;
+  --txt-s-lh: calc(var(--txt-s) * 1.2);
 }
 
 .title {
@@ -42,7 +45,13 @@ body {
 
 .txt {
   font-size: var(--txt);
-  line-height: var(--txt);
+  line-height: var(--txt-lh);
+  color: var(--white);
+}
+
+.txt-s {
+  font-size: var(--txt-s);
+  line-height: var(--txt-s-lh);
   color: var(--white);
 }
 
@@ -100,6 +109,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
   gap: 0.75rem;
 }
 
@@ -120,6 +130,21 @@ body {
 
 .guess-letter--pre-animation {
   opacity: 0;
+}
+
+#guess-definition {
+  text-align: center;
+  max-width: 600px;
+  opacity: 0.5;
+}
+
+#guess-definition small {
+  font-style: italic;
+  display: block;
+}
+
+#guess-definition small:not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 @keyframes fadeInFromNone {
